<resources>
    <string name="app_name">Food app</string>

    <string name="title">title</string>
    <string name="empty_cart">your cart is Empty</string>
    <string name="enter_your_code">Enter Your Code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="dollar">$-</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="rating">5 Rating</string>
    <string name="waiting_time">15 min</string>
    <string name="details">Details</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="quantity_number">1</string>
    <string name="plus">+</string>
    <string name="total_price">Total Price</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="food">Food</string>
    <string name="app">App</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="or">OR</string>
    <string name="are_not_user">You aren\'t a user?</string>
    <string name="welcome">Welcome</string>
    <string name="profile_name">Hamidreza Manafi</string>
</resources>