<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2xLarge"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_standard"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:text="@string/food"
                    android:textColor="@color/blue_grey"
                    android:textSize="@dimen/font_size_45"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app"
                    android:textColor="@color/blue_grey"
                    android:textSize="@dimen/font_size_45" />/>
            </LinearLayout>

            <EditText
                android:id="@+id/userEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_text_view_height"
                android:layout_marginHorizontal="@dimen/margin_xLarge"
                android:layout_marginTop="@dimen/margin_xLarge"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="@color/blue_grey"
                android:textSize="@dimen/font_size_16" />

            <EditText
                android:id="@+id/passEdt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_text_view_height"
                android:layout_marginHorizontal="@dimen/margin_xLarge"
                android:layout_marginTop="@dimen/margin_standard"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/blue_grey"
                android:textSize="@dimen/font_size_16"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textSize="@dimen/font_size_16"
                android:layout_marginTop="@dimen/margin_xLarge"
                android:textAlignment="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/red_button_bg"
                android:layout_margin="@dimen/margin_xLarge"
                style="@android:style/Widget.Button"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_xLarge"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view4"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#b2b5b5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="@dimen/font_size_18"
                    android:layout_margin="@dimen/margin_small"
                    />

                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/divider_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/light_grey_bg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_xLarge"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/facebook" />
                <ImageView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/google" />
                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/twitter" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/are_not_user"
                    android:textSize="@dimen/font_size_16"
                    android:textColor="@color/blue_grey"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/red"
                    android:textSize="@dimen/font_size_16"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>